@@ -24,5 +24,7 @@ t/PYX-Sort/01-use.t
 t/PYX-Sort/02-version.t
 t/PYX-Sort/03-new.t
 t/PYX-Sort/04-parse.t
+t/PYX-Sort/05-parse_file.t
+t/PYX-Sort/06-parse_handler.t
 xt/PYX-Sort/01-pod_coverage.t
 xt/PYX-Sort/02-pod.t
