@@ -6,6 +6,7 @@ build_requires:
   English: 0
   ExtUtils::MakeMaker: 6.36
   File::Object: 0.07
+  Perl6::Slurp: 0
   Test::More: 0
   Test::NoWarnings: 0
   Test::Output: '1.02'
