@@ -27,6 +27,7 @@ resources 'homepage' => 'https://github.com/tupinek/PYX-Sort';
 resources 'repository' => 'git://github.com/tupinek/PYX-Sort';
 test_requires 'English' => 0;
 test_requires 'File::Object' => 0.07;
+test_requires 'Perl6::Slurp' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
 test_requires 'Test::Output' => '1.02';
