@@ -2,8 +2,9 @@ TODO
 ====
 1. Udelat funkcionalitu pro skript pyx_sort pro setrideni celeho dokumentu.
    Pro testovani stejnosti xml dokumentu.
-2. Dodelat testy.
 3.
 
 Applied
 =======
+2. Dodelat testy.
+OK [20151021] skim
