@@ -5,7 +5,6 @@ use warnings;
 # Modules.
 use File::Object;
 use PYX::Sort;
-use Perl6::Slurp qw(slurp);
 use Test::More 'tests' => 3;
 use Test::NoWarnings;
 use Test::Output;
@@ -15,7 +14,6 @@ my $data_dir = File::Object->new->up->dir('data');
 
 # Test.
 my $obj = PYX::Sort->new;
-my $pyx_data = slurp($data_dir->file('ex1.pyx')->s);
 my $right_ret = <<"END";
 (tag
 Aattr1="value"
@@ -26,20 +24,19 @@ Aattr3="value"
 END
 stdout_is(
 	sub {
-		$obj->parse($pyx_data);
+		$obj->parse_file($data_dir->file('ex1.pyx')->s);
 		return;
 	},
 	$right_ret,
-	'Parse data from ex1.pyx file.',
+	'Parse ex1.pyx file.',
 );
 
 # Test.
-$pyx_data = slurp($data_dir->file('ex2.pyx')->s);
 stdout_is(
 	sub {
-		$obj->parse($pyx_data);
+		$obj->parse_file($data_dir->file('ex2.pyx')->s);
 		return;
 	},
 	$right_ret,
-	'Parse data from ex2.pyx file.',
+	'Parse ex2.pyx file.',
 );
