@@ -1,4 +1,5 @@
 0.03
+ - Add tests for parse() and parse_handler() methods.
  - Improve SEE ALSO section in doc.
  - Move author tests to xt/ directory.
  - Update Module::Install to 1.16 version.
